Full size window based on screen resolution.